--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,4 +1,5 @@
 footer {
+	margin-top: 2em;
 	color: $grayDarker;
 	font-size: 50%;
 	border-top: 1px solid $grayDark;
